// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobTasks /> should render properly with job tasks 1`] = `
.emotion-20 {
  height: auto;
}

.emotion-19 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-19 tr {
  background-color: #252525;
}

.emotion-19 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-19 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-19 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-19 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-19 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-19 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-19 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-19 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-19 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(3) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  padding-left: 16px;
}

<div
  className="emotion-20"
>
  <table
    className="emotion-19"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          Task State
        </th>
        <th
          className="emotion-0"
        >
          Task ID
        </th>
        <th
          className="emotion-0"
        >
          Description
        </th>
        <th
          className="emotion-0"
        >
          Duration
        </th>
        <th
          className="emotion-0"
        >
          Assets
        </th>
        <th
          className="emotion-0"
        >
          Updated
        </th>
        <th
          className="emotion-0"
        >
          Errors
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#ffffff"
            data-file-name="clock.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Waiting
          </span>
        </td>
        <td
          title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f6"
        >
          c812fa09-5f3a-11ea-bb46-6a6895b1a9f6
        </td>
        <td
          title="Expand with 20 assets, 8 processors."
        >
          Expand with 20 assets, 8 processors.
        </td>
        <td>
          13h : 33m : 58s
        </td>
        <td>
          20
        </td>
        <td>
          2020-03-05 23:41:28
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#ebb52e"
            data-file-name="generating.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Running
          </span>
        </td>
        <td
          title="ea7836f2-44a7-19e1-a67f-1e6fa1f82545"
        >
          ea7836f2-44a7-19e1-a67f-1e6fa1f82545
        </td>
        <td
          title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
        >
          Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
        </td>
        <td>
          01h : 07m : 38s
        </td>
        <td>
          0
        </td>
        <td>
          2020-03-05 23:40:52
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#4ac565"
            data-file-name="checkmark.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Success
          </span>
        </td>
        <td
          title="ea7836f3-44a7-19e1-a67f-1e6fa1f82545"
        >
          ea7836f3-44a7-19e1-a67f-1e6fa1f82545
        </td>
        <td
          title="Expand with 15 assets, 8 processors."
        >
          Expand with 15 assets, 8 processors.
        </td>
        <td>
          10h : 26m : 32s
        </td>
        <td>
          15
        </td>
        <td>
          2020-03-05 23:42:28
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#c92300"
            data-file-name="crossSmall.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Failure
          </span>
        </td>
        <td
          title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f9"
        >
          c812fa09-5f3a-11ea-bb46-6a6895b1a9f9
        </td>
        <td
          title="Expand with 20 assets, 8 processors."
        >
          Expand with 20 assets, 8 processors.
        </td>
        <td>
          13h : 33m : 58s
        </td>
        <td>
          20
        </td>
        <td>
          2020-03-05 23:41:28
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#808080"
            data-file-name="paused.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Skipped
          </span>
        </td>
        <td
          title="ea7836f2-44a7-19e1-a67f-1e6fa1f82549"
        >
          ea7836f2-44a7-19e1-a67f-1e6fa1f82549
        </td>
        <td
          title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
        >
          Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
        </td>
        <td>
          01h : 07m : 38s
        </td>
        <td>
          0
        </td>
        <td>
          2020-03-05 23:40:52
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-8"
        >
          <svg
            color="#4a90e2"
            data-file-name="squareSquareSquare.svg"
            width={20}
          />
          <span
            className="emotion-7"
          >
            Queued
          </span>
        </td>
        <td
          title="ea7836f3-44a7-19e1-a67f-1e6fa1f82549"
        >
          ea7836f3-44a7-19e1-a67f-1e6fa1f82549
        </td>
        <td
          title="Expand with 15 assets, 8 processors."
        >
          Expand with 15 assets, 8 processors.
        </td>
        <td>
          10h : 26m : 32s
        </td>
        <td>
          15
        </td>
        <td>
          2020-03-05 23:42:28
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;

exports[`<JobTasks /> should render properly without job tasks 1`] = `
.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(3) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-10 tr {
  background-color: #252525;
}

.emotion-10 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-10 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-10 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-10 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-10 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-10 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-10 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-10 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-10 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-9 {
  height: 100%;
  pointer-events: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-11"
>
  <table
    className="emotion-10"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          Task State
        </th>
        <th
          className="emotion-0"
        >
          Task ID
        </th>
        <th
          className="emotion-0"
        >
          Description
        </th>
        <th
          className="emotion-0"
        >
          Duration
        </th>
        <th
          className="emotion-0"
        >
          Assets
        </th>
        <th
          className="emotion-0"
        >
          Updated
        </th>
        <th
          className="emotion-0"
        >
          Errors
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="emotion-9"
      >
        <td
          colSpan={7}
        >
          <div
            className="emotion-8"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="noJobs.svg"
                width={200}
              />
              <div>
                This job has no tasks.
              </div>
              <div>
                Any new task will appear here.
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;
